--- a/StudioEspen/Views/Shared/_Layout.cshtml
+++ b/StudioEspen/Views/Shared/_Layout.cshtml
@@ -5,26 +5,49 @@
         <title>Studio Espen</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
-        @Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")
+        <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+        <link href="~/Content/business-casual.css" rel="stylesheet" />
+        <link href="~/Content/Site.css" rel="stylesheet" />
     </head>
     <body>
         <header>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-                </div>
-                <div class="float-right">
-                    <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Frisør", "Index", "Home")</li>
-                            <li>@Html.ActionLink("Hudpleie", "Skincare", "Home")</li>
-                            <li>@Html.ActionLink("Om oss", "Contact", "Home")</li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
+            STUDIO <img src="~/Content/Logo.png" class="logo" /> espen
         </header>
+
+   <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+                <a class="navbar-brand" href="index.html">Business Casual</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="index.html">Frisør</a>
+                    </li>
+                    <li>
+                        <a href="about.html">Hudpleie</a>
+                    </li>
+                    <li>
+                        <a href="blog.html">Produkter</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Om oss</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
         <div id="body">
             @RenderSection("featured", required: false)
             <section class="content-wrapper main-content clear-fix">
@@ -38,8 +61,7 @@
                 </div>
             </div>
         </footer>
-
-        @Scripts.Render("~/bundles/jquery")
-        @RenderSection("scripts", required: false)
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="~/Scripts/bootstrap.min.js"></script>
     </body>
 </html>
