--- a/StudioEspen/Views/Shared/_Layout.cshtml
+++ b/StudioEspen/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         <a href="blog.html">Produkter</a>
                     </li>
                     <li>
-                        <a href="contact.html">Om oss</a>
+                        <a href="contact.html">Om øss</a>
                     </li>
                 </ul>
             </div>
